--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
     "react-map-gl": "^8.1.0",
     "react-resizable-panels": "^4.4.0",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18",
-    "vaul": "^1.1.2"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
