--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   "dependencies": {
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.6.1",
+    "@nanostores/persistent": "^1.2.0",
+    "@nanostores/react": "^1.0.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.18",
@@ -56,6 +58,7 @@
     "country-flag-icons": "^1.6.4",
     "lucide-react": "^0.562.0",
     "maplibre-gl": "^5.16.0",
+    "nanostores": "^1.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-map-gl": "^8.1.0",
